...
import com.android.sample.R
import com.android.sample.ui.calendar.components.ValidatingTextField
import com.android.sample.ui.common.BottomNavigationButtons
import com.android.sample.ui.theme.PaddingMedium

object AddOrganizationScreenTestTags {
  const val ROOT = "addOrganizationScreenRoot"
  const val ORGANIZATION_NAME_TEXT_FIELD = "organizationNameTextField"
  const val CREATE_BUTTON = "createButton"
  const val BACK_BUTTON = "backButton"
}

@Composable
fun AddOrganizationScreen(
    addOrganizationViewModel: AddOrganizationViewModel = viewModel(),
...
